<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">知乎日报</string>
    <string name="app_sub_name">与世界分享你的知识、经验和见解</string>
    <string name="app_version">1.0.0</string>
    <string name="app_author">Kevin Xiu</string>

    <string name="action_settings">设置</string>
    <string name="action_night_theme">夜间模式</string>
    <string name="action_day_theme">日间模式</string>
    <string name="start_text">Kevin</string>
    <string name="action_share">分享</string>
    <string name="navigation_drawer_open">导航抽屉打开</string>
    <string name="navigation_drawer_close">导航抽屉关闭</string>
    <string name="title_activity_main">首页</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_story">详情页</string>
    <string name="recycler_item_main_today_hottest">今日热闻</string>
    <string name="avatar_title_editor">主编</string>
    <string name="recycler_item_main_select_from">选自</string>
    <string name="avatar_title_referee">推荐人</string>
    <string name="share_from">-来自知乎日报的分享</string>
    <string name="share_link">链接：</string>
    <string name="action_collect">收藏</string>
    <string name="action_comment">评论</string>
    <string name="action_praise">赞</string>
    <string name="title_activity_collected">收藏夹</string>
    <string name="pref_clear_cache">清理缓存</string>
    <string name="pref_header_general">General</string>

    <string name="empty_comment">深度长评虚位以待</string>
    <string name="pref_night">夜间模式</string>
    <string name="pref_night_summary">切换为夜间模式</string>

    <string name="pref_title">偏好设置</string>

    <string name="pref_no_photo">无图模式</string>

    <string name="pref_no_photo_summary">2G/3G网络不显示图片</string>

    <string name="pref_about">关于</string>

    <string name="pref_version">版本信息</string>
    <string name="pref_about_me">关于我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
