<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_night"
            android:summary="@string/pref_night_summary"
            android:title="@string/pref_night"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_no_photo"
            android:summary="@string/pref_no_photo_summary"
            android:title="@string/pref_no_photo"/>
        <Preference
            android:key="pref_clear_cache"
            android:title="@string/pref_clear_cache"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about">
        <Preference
            android:key="pref_version"
            android:title="@string/pref_version"/>
        <Preference
            android:key="pref_about"
            android:title="@string/pref_about_me"/>
    </PreferenceCategory>


</PreferenceScreen>
