<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/share"
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_collect"
          android:title="@string/action_collect"
          android:icon="@drawable/collect"
          app:showAsAction="always" />
    <item
        android:icon="@drawable/comment"
        android:id="@+id/action_comment"
        android:title="@string/action_comment"
        app:showAsAction="always"
        app:actionLayout="@layout/layout_action_comment"
        />
    <item
        android:icon="@drawable/praise"
        android:id="@+id/action_praise"
        android:title="@string/action_praise"
        app:showAsAction="always"
        app:actionLayout="@layout/layout_action_praise"
        />


</menu>
